RESOLVED FIXED76556
[Skia Mac] Match style of platform error underline for misspellings
https://bugs.webkit.org/show_bug.cgi?id=76556
Summary [Skia Mac] Match style of platform error underline for misspellings
Cary Clark
Reported 2012-01-18 11:09:19 PST
[Skia Mac] Match style of platform error underline for misspellings
Attachments
Patch (10.37 KB, patch)
2012-01-18 11:15 PST, Cary Clark
no flags
Patch (10.38 KB, patch)
2012-01-19 13:52 PST, Cary Clark
no flags
Cary Clark
Comment 1 2012-01-18 11:15:15 PST
Cary Clark
Comment 2 2012-01-18 11:17:01 PST
this is chromium bug 110009
Stephen White
Comment 3 2012-01-19 12:04:56 PST
Comment on attachment 122968 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=122968&action=review Looks good, assuming it passes the linter. r=me > Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:659 > +#if PLATFORM(CHROMIUM) && OS(DARWIN) Nit: Probably don't need PLATFORM(CHROMIUM) here, but I see you've added it elsewhere.
WebKit Review Bot
Comment 4 2012-01-19 12:48:47 PST
Comment on attachment 122968 [details] Patch Rejecting attachment 122968 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: cceeded at 1 with fuzz 3. patching file Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/chromium/test_expectations.txt Hunk #1 FAILED at 3901. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/chromium/test_expectations.txt.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Stephen White', u'--fo..." exit_code: 1 Full output: http://queues.webkit.org/results/11132184
Cary Clark
Comment 5 2012-01-19 13:52:31 PST
Cary Clark
Comment 6 2012-01-19 13:53:30 PST
First patch ran into an overlapping change in test_expectations.txt. Other than resolving the conflict, the patch is identical to the one uploaded before.
Stephen White
Comment 7 2012-01-19 14:16:07 PST
Comment on attachment 123188 [details] Patch OK. r=me
WebKit Review Bot
Comment 8 2012-01-19 17:47:56 PST
Comment on attachment 123188 [details] Patch Clearing flags on attachment: 123188 Committed r105468: <http://trac.webkit.org/changeset/105468>
WebKit Review Bot
Comment 9 2012-01-19 17:48:01 PST
All reviewed patches have been landed. Closing bug.
Cary Clark
Comment 10 2012-03-02 11:29:22 PST
Note You need to log in before you can comment on or make changes to this bug.