[Skia Mac] Match style of platform error underline for misspellings https://bugs.webkit.org/show_bug.cgi?id=76556

Reviewed by Stephen White.

Source/WebCore:

Add Darwin-specific code in Skia to draw the error underline so that
it matches the CoreGraphics style.

Many existing layout tests inadvertantly trigger the misspelling
underline by including the word 'foo' in an editable field. Those
tests are temporarily suppressed separately in an edit to
test_expectations.txt.

* platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContext::drawLineForTextChecking):

LayoutTests:

Suppress editing tests with misspellings, since the error underline
is drawn differently.

* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/93511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105468 268f45cc-cd09-0410-ab3c-d52691b4dbfc